--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bkrzyEkspDane
 Type: Package
 Title: Eksploracyjna wizualizacja danych
-Version: 0.1.3
+Version: 0.1.4
 Author: Bartosz Krzysik [aut, cre]
 Maintainer: Bartosz Krzysik <b.krzysik2@gmail.com>
 Description: Zestaw funkcji do eksploracyjnej wizualizacji danych w R.
@@ -16,7 +16,9 @@ Imports:
     dplyr,
     GGally,
     htmltools,
-    rmarkdown
+    rmarkdown,
+    reactable,
+    flexdashboard,
+    ggthemes
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.3.3
