--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bkrzyEkspDane
 Type: Package
 Title: Eksploracyjna wizualizacja danych
-Version: 0.1.4
+Version: 0.2.0
 Author: Bartosz Krzysik [aut, cre]
 Maintainer: Bartosz Krzysik <b.krzysik2@gmail.com>
 Description: Zestaw funkcji do eksploracyjnej wizualizacji danych w R.
@@ -18,6 +18,7 @@ Imports:
     htmltools,
     rmarkdown,
     reactable,
+    lubridate,
     flexdashboard,
     ggthemes
 Encoding: UTF-8
